pkg/lang/testdata/ub/inputs/invalid/default-nested-below-minimum.ub
inputs: {
  spec: {
    type: object({
      port: { type: optional(integer, 0), minimum: 1 },
    })
  }
}
